Fix: Move TypeScript and types to dependencies for Render build

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "license": "MIT",
   "dependencies": {
     "@fastify/websocket": "^10.0.1",
+    "@types/node": "^22.5.5",
+    "@types/pg": "^8.11.10",
+    "@types/ws": "^8.5.12",
     "bullmq": "^5.13.2",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
@@ -27,16 +30,13 @@
     "pg": "^8.12.0",
     "pino": "^9.4.0",
     "pino-pretty": "^11.2.2",
+    "typescript": "^5.6.2",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "^22.5.5",
-    "@types/pg": "^8.11.10",
-    "@types/ws": "^8.5.12",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "tsx": "^4.19.1",
-    "typescript": "^5.6.2"
+    "tsx": "^4.19.1"
   }
 }
