--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc && cp -r src/database/*.sql dist/database/",
-    "start": "node dist/server.js",
-    "worker": "tsx src/worker/index.ts",
+    "start": "bash start.sh",
+    "worker": "node dist/worker/index.js",
     "worker:dev": "tsx watch src/worker/index.ts",
     "test": "jest",
     "test:watch": "jest --watch",
